syntax = "proto3";

option csharp_namespace = "Generated";

message ChatResponse
{ 
    string name = 1;
    string textmessage = 2;
}