syntax = "proto3";

import "Close.proto";

import "ChatRequest.proto";
import "ChatResponse.proto";

option csharp_namespace = "Generated";

service ChatService {
	rpc chatStream(ChatRequest) returns (stream ChatRequest);
	rpc sendMessage(ChatRequest) returns (Close);
}