syntax = "proto3";

option csharp_namespace = "Generated";

message LogInRequest
{
	string name = 1;
}